Take out br spacing in globals and fix about img height

--- a/assets/src/scss/_4_redefine/_hr.scss
+++ b/assets/src/scss/_4_redefine/_hr.scss
@@ -15,9 +15,9 @@
 
 
 //BR code found here: https://stackoverflow.com/questions/7614928/change-br-height-using-css
-br {
+/*br {
 	content: "";
 	margin: 2em;
 	display: block;
 	font-size: 24%;
-}
+}*/
